# Taskify

./: CMakeLists.txt  MainFrame.cpp  MainFrame.h  ParserJSON.h  README.md  TaskPanel.cpp  TaskPanel.h  XMLParser.h  main.cpp
src/: MainFrame.cpp  MainFrame.h  TaskPanel.cpp  TaskPanel.h  ThemeManager.cpp  ThemeManager.h  XMLParser.h  main.cpp
src/Controller/: Controller.cpp  Controller.h
src/Model/: Task.cpp  Task.h  XMLParser.cpp  XMLParser.h
src/View/: MainFrame.cpp  MainFrame.h  TaskPanel.cpp  TaskPanel.h  ThemeManager.cpp  ThemeManager.h
test/: CMakeLists.txt  TaskTest.cpp  XMLParserTest.cpp  test_invalid.xml  test_valid.xml
